Refactored new-board-page.component.scss for improved styling

--- a/src/app/board/pages/new-board-page/new-board-page.component.scss
+++ b/src/app/board/pages/new-board-page/new-board-page.component.scss
@@ -1,11 +1,8 @@
 @import '/src/import-styles.scss';
 
 #board-form {
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
+    @extend .margin-md-top;
+    @extend .container-sm;
 }
 
 #board-form-content {
