Fix data type in Notification interface

--- a/src/app/board/pages/board-settings-page/board-settings-page.component.html
+++ b/src/app/board/pages/board-settings-page/board-settings-page.component.html
@@ -199,7 +199,7 @@
                                 </ng-container>
                                 <ng-template #inviteUserTmpl>
                                     <form id="invite-user-container" [formGroup]="inviteUserForm"
-                                        (ngSubmit)="inviteUserForm.valid && inviteUserEmitter.next({ userForm: inviteUserForm.value, board: board.data! });  inviteUserVm.inviting = false; inviteUserForm.reset();">
+                                        (ngSubmit)="inviteUserForm.valid && inviteUserEmitter.next({ userForm: inviteUserForm.value, board: board.data });  inviteUserVm.inviting = false; inviteUserForm.reset();">
                                         <mat-form-field>
                                             <mat-label>User Email</mat-label>
                                             <input matInput type="text" formControlName="email"
