--- a/src/app/pages/index-page/index-page.component.html
+++ b/src/app/pages/index-page/index-page.component.html
@@ -2,6 +2,7 @@
     <div id="navbar">
         <a routerLink="/" id="logo">
             <img src="assets/redketchup/favicon-32x32.png" alt="logo">
+            <h1>Todo</h1>
         </a>
         <button mat-raised-button color="accent" (click)="authService.loginWithRedirect()">Sign In</button>
     </div>
