--- a/src/app/pages/app-page/app-page.component.html
+++ b/src/app/pages/app-page/app-page.component.html
@@ -14,6 +14,7 @@
                         </button>
                         <a routerLink="/" id="logo">
                             <img src="assets/redketchup/favicon-32x32.png" alt="logo">
+                            <h1>Todo</h1>
                         </a>
                     </div>
                     <div>
