--- a/src/app/board/pages/new-board-page/new-board-page.component.html
+++ b/src/app/board/pages/new-board-page/new-board-page.component.html
@@ -1,57 +1,25 @@
 <ng-container *ngIf="{
     submitBoardStatePerc: submitBoardStatePerc$ | async,
-    addState: addState$ | async,
-    removeState: removeState$ | async,
     submitBoard: submitBoard$ | async,
 } as vm">
+
     <form id="board-form" (ngSubmit)="boardForm.valid && submitBoardEmitter.next(boardForm.value)"
         [formGroup]="boardForm">
-        <mat-vertical-stepper #stepper>
-            <mat-step>
-                <ng-template matStepLabel>Title</ng-template>
+        <mat-card>
+            <mat-card-content>
                 <div id="board-title-container">
                     <mat-form-field>
                         <mat-label>Project Name</mat-label>
                         <input matInput formControlName="title">
                     </mat-form-field>
-                    <div class="action-bar">
-                        <button mat-stroked-button type="button" color="warn" routerLink="..">Cancel</button>
-                        <button mat-raised-button type="button" color="primary" matStepperNext
-                            [disabled]="boardForm.invalid">Next</button>
-                    </div>
                 </div>
-            </mat-step>
-            <mat-step optional>
-                <ng-template matStepLabel>States</ng-template>
-                <ng-container formArrayName="states">
-                    <div id="states-form-container">
-                        <ng-container *ngFor="let states of states.controls; let i = index">
-                            <div class="state-name-container">
-                                <mat-form-field>
-                                    <mat-label>State Name</mat-label>
-                                    <input matInput [formControlName]="i">
-                                </mat-form-field>
-                                <button mat-icon-button type="button" color="warn" (click)="removeStateEmitter.next(i)">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                            </div>
-                        </ng-container>
-                        <button mat-raised-button type="button" color="accent" (click)="addStateEmitter.next()">Add
-                            State</button>
-                        <div class="action-bar">
-                            <button mat-stroked-button type="button" color="warn" matStepperPrevious>Back</button>
-                            <button mat-raised-button type="button" color="accent" matStepperNext>Next</button>
-                        </div>
-                    </div>
-                </ng-container>
-            </mat-step>
-            <mat-step>
-                <ng-template matStepLabel>Complete</ng-template>
+            </mat-card-content>
 
+            <mat-card-actions>
                 <div id="create-board-container">
                     <ng-container *ngIf="!vm.submitBoardStatePerc; else submitBoardStateTmpl">
-
-                        <button mat-raised-button type="submit" color="accent" matStepperNext>Create</button>
+                        <button mat-stroked-button type="button" color="warn" routerLink="..">Cancel</button>
+                        <button mat-raised-button type="submit" color="accent">Create</button>
                     
                     </ng-container>
                     <ng-template #submitBoardStateTmpl>
@@ -62,7 +30,7 @@
 
                     </ng-template>
                 </div>
-            </mat-step>
-        </mat-vertical-stepper>
+            </mat-card-actions>
+        </mat-card>
     </form>
 </ng-container>
