--- a/src/app/pages/app-page/app-page.component.html
+++ b/src/app/pages/app-page/app-page.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="{
     boards: boards$ | async,
     notifications: notifications$ | async,
-    unreadNotifications: unreadNotifications$ | async
+    unreadNotifications: unreadNotifications$ | async,
+    userInvites: userInvites$ | async,
 } as vm">
     <mat-drawer-container>
         <div>
@@ -21,17 +22,22 @@
 
                         <ng-container *ngIf="vm.notifications as notifications">
                             <ng-container *ngIf="notifications.loaded">
-                                <button mat-icon-button [matMenuTriggerFor]="notificationMenu" [matBadge]="vm.unreadNotifications" [matBadgeHidden]="vm.unreadNotifications == 0" matBadgeColor="warn" style="font-size: .8rem;">
-                                    <mat-icon>notifications</mat-icon>
+                                <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
+                                    <mat-icon [matBadge]="vm.unreadNotifications" [matBadgeHidden]="vm.unreadNotifications == 0"
+                                    matBadgeColor="warn" matBadgePosition="before" matBadgeSize="small">notifications</mat-icon>
                                 </button>
 
                                 <mat-menu #notificationMenu="matMenu">
                                     <div id="notifications-menu">
-                                        <ng-container *ngFor="let notification of sortNotifications(Object.values(notifications.data))">
-                                            <a class="notification-container" mat-menu-item [routerLink]="getNotificationLink(notification.data)" (click)="markAsRead(notification.data)">
-                                                <div class="notification-link">
-                                                    <mat-icon *ngIf="!notification.data.read" color="accent">adjust</mat-icon>
-                                                    <span>{{ notification.data.title }}</span>
+                                        <ng-container
+                                            *ngFor="let notification of sortNotifications(Object.values(notifications.data))">
+                                            <a class="notification-container" mat-menu-item
+                                                [routerLink]="getNotificationLink(notification.data)"
+                                                (click)="markAsRead(notification.data)">
+                                                <div class="notification-link" [ngClass]="{pad: !notification.data.read }">
+                                                    <span
+                                                    matBadge="!" [matBadgeOverlap]="false" [matBadgeHidden]="notification.data.read"
+                                                    matBadgeColor="warn" matBadgePosition="before" matBadgeSize="small">{{ notification.data.title }}</span>
                                                 </div>
                                             </a>
                                         </ng-container>
@@ -39,28 +45,38 @@
                                     <mat-divider></mat-divider>
                                     <a style="text-decoration: none; color: unset;" mat-menu-item
                                         routerLink="/app/notification">
-                                        <mat-icon color="primary">center_focus_weak</mat-icon>
                                         <span>Notification Center</span>
                                     </a>
                                 </mat-menu>
                             </ng-container>
                         </ng-container>
 
-                        <button mat-icon-button [matMenuTriggerFor]="settingsMenu">
-                            <mat-icon>menu</mat-icon>
-                        </button>
+                        <ng-container *ngIf="vm.userInvites as userInvites">
 
-                        <mat-menu #settingsMenu="matMenu">
-                            <a style="text-decoration: none; color: unset;" mat-menu-item routerLink="/app/account">
-                                <mat-icon color="primary">account_circle</mat-icon>
-                                <span>Account</span>
-                            </a>
-                            <hr>
-                            <button mat-menu-item (click)="authService.logout()">
-                                <mat-icon color="warn">logout</mat-icon>
-                                <span>Sign Out</span>
+                            <button mat-icon-button [matMenuTriggerFor]="settingsMenu">
+                                <mat-icon [matBadge]="userInvites.length" matBadgeSize="small" [matBadgeHidden]="userInvites.length == 0" matBadgeColor="accent" matBadgePosition="before">menu</mat-icon>
                             </button>
-                        </mat-menu>
+
+                            <mat-menu #settingsMenu="matMenu">
+                                <a style="text-decoration: none; color: unset;" mat-menu-item routerLink="/app/account">
+                                    <mat-icon color="primary">account_circle</mat-icon>
+                                    <span>Account</span>
+                                </a>
+                                <ng-container *ngIf="userInvites.length > 0">
+                                    <a style="text-decoration: none; color: unset;" mat-menu-item
+                                        routerLink="/app/invite">
+                                        <mat-icon matBadge="userInvites.length" matBadgePosition="before"
+                                            matBadgeSize="small" matBadgeColor="accent" color="primary">mail</mat-icon>
+                                        <span>Invites</span>
+                                    </a>
+                                </ng-container>
+                                <hr>
+                                <button mat-menu-item (click)="logout()">
+                                    <mat-icon color="warn">logout</mat-icon>
+                                    <span>Sign Out</span>
+                                </button>
+                            </mat-menu>
+                        </ng-container>
                     </div>
                 </div>
             </mat-toolbar>
@@ -77,8 +93,9 @@
                     <mat-nav-list>
                         <ng-container *ngFor="let board of Object.values(boards.data)">
                             <ng-container *ngIf="board.loaded">
-                                <a (click)="drawer.close()" mat-list-item [routerLink]="['/app/board', board.data.id]">{{
-                                board.data.title }}</a>
+                                <a (click)="drawer.close()" mat-list-item
+                                    [routerLink]="['/app/board', board.data.id]">{{
+                                    board.data.title }}</a>
                             </ng-container>
                         </ng-container>
                         <ng-container *ngIf="boards.loading; else createBoardTmpl">
